--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Inicial</title>
 </head>
 <body>
     <h1>Página Inicial</h1>
     <a href="vendas.html">ir para vendas</a>
+    <p>Essa é a pagina home</p>
 </body>
 </html>
